openshift/vllm-dependency/llmis-rbac/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vllm-optimizer-networkpolicy
  namespace: ${VLLM_NAMESPACE}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ${VLLM_DEPLOYMENT_NAME}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ${NAMESPACE}
      podSelector:
        matchLabels:
          app: vllm-optimizer-backend
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-lightspeed
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 8080
